--- a/mobile-app/.gitignore
+++ b/mobile-app/.gitignore
@@ -1,8 +1,8 @@
-platforms/android
-platforms/ios
+#platforms/android
+#platforms/ios
 
-plugins/cordova-plugin-*
-plugins/com.*
+#plugins/cordova-plugin-*
+#plugins/com.*
 
 hooks
 
@@ -18,7 +18,7 @@ Thumbs.db
 *.log
 *.swp
 *.user
-
+*.apk
 
 .DS_Store
 ._*
