Modify config for better iOS build

--- a/mobile-app/Makefile
+++ b/mobile-app/Makefile
@@ -7,13 +7,13 @@ TARGET_PLATFORMS += android
 
 ifeq ($(UNAME), Darwin)
 #can only be build on macs
-TARGET_PLATFORMS += ios
+TARGET_PLATFORMS += ios@3.8.0
 endif
 
 
 
 
-all: plat_files platforms cordova
+all: platforms plat_files cordova
 
 cordova:
 	cordova build
@@ -23,7 +23,7 @@ platform:
 
 plat_files: platform src/android/MainActivity.java
 	cp src/android/MainActivity.java platforms/android/src/edu/umich/eecs/lab11/summon/.
-	cp -r src/ios/Classes/* platforms/ios/Summon/Classes/.
+	cp -r src/ios/* platforms/ios/Summon/.
 
 clean:
 	cordova platform remove $(TARGET_PLATFORMS) || true
