--- a/mobile-app/Makefile
+++ b/mobile-app/Makefile
@@ -1,4 +1,4 @@
-#This is the cordova makefile
+#Summon Makefile
 
 UNAME := $(shell uname)
 
@@ -7,25 +7,26 @@ TARGET_PLATFORMS += android
 
 ifeq ($(UNAME), Darwin)
 #can only be build on macs
-TARGET_PLATFORMS += ios@3.8.0
+TARGET_PLATFORMS += ios@3.9.2
 endif
 
 
 
 
-all: platforms plat_files cordova
-
-cordova:
-	cordova build
+all: platform link build
 
 platform:
 	cordova platform add $(TARGET_PLATFORMS) || true
 
-plat_files: platform src/android/MainActivity.java
-	cp src/android/MainActivity.java platforms/android/src/edu/umich/eecs/lab11/summon/.
-	cp -r src/ios/* platforms/ios/Summon/.
+link:
+	ln -fs $(PWD)/src/android/* platforms/android/src/edu/umich/eecs/lab11/summon/.
+	ln -fs $(PWD)/src/ios/Classes/* platforms/ios/Summon/Classes/.
+	ln -fs $(PWD)/src/ios/Summon-Info.plist platforms/ios/Summon/.
+
+build:
+	cordova build
 
 clean:
-	cordova platform remove $(TARGET_PLATFORMS) || true
+	rm -r platforms plugins
 
 
