--- a/peripherals/examples/android/eddystone/app/src/main/AndroidManifest.xml
+++ b/peripherals/examples/android/eddystone/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 </manifest>
