--- a/peripherals/examples/android/eddystone/gradle.properties
+++ b/peripherals/examples/android/eddystone/gradle.properties
@@ -16,3 +16,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+
+# Get key from https://console.developers.google.com/apis/api/urlshortener/
+# API_KEY = "XXxxXxXxxXXXx0X0XXXX00x000xXX0XxX-xX00x"
