Set up framework for Android widget

--- a/mobile-app/Makefile
+++ b/mobile-app/Makefile
@@ -19,7 +19,9 @@ platform:
 	cordova platform add $(TARGET_PLATFORMS) || true
 
 link:
-	ln -fs $(PWD)/src/android/* platforms/android/src/edu/umich/eecs/lab11/summon/.
+	ln -fs $(PWD)/src/android/src/edu/umich/eecs/lab11/summon/* platforms/android/src/edu/umich/eecs/lab11/summon/.
+	ln -fs $(PWD)/res/icon-ios-180.png platforms/android/res/drawable-mdpi/widget.png
+	ln -fs $(PWD)/src/android/res/layout platforms/android/res/.
 	ln -fs $(PWD)/src/ios/CordovaLib/Classes/Private/Plugins/CDVUIWebViewEngine/CDVUIWebViewNavigationDelegate.m platforms/ios/CordovaLib/Classes/Private/Plugins/CDVUIWebViewEngine/.
 
 build:
