--- a/mobile-app/Makefile
+++ b/mobile-app/Makefile
@@ -6,7 +6,7 @@ UNAME := $(shell uname)
 TARGET_PLATFORMS += android
 
 ifeq ($(UNAME), Darwin)
-#can only be build on macs
+#can only be built on macs
 TARGET_PLATFORMS += ios
 endif
 
@@ -22,7 +22,8 @@ link:
 	ln -fs $(PWD)/src/android/src/edu/umich/eecs/lab11/summon/* platforms/android/src/edu/umich/eecs/lab11/summon/.
 	ln -fs $(PWD)/res/icon-ios-180.png platforms/android/res/drawable-mdpi/widget.png
 	ln -fs $(PWD)/src/android/res/layout platforms/android/res/.
-	ln -fs $(PWD)/src/ios/CordovaLib/Classes/Private/Plugins/CDVUIWebViewEngine/CDVUIWebViewNavigationDelegate.m platforms/ios/CordovaLib/Classes/Private/Plugins/CDVUIWebViewEngine/.
+	ln -fs $(PWD)/src/ios/CordovaLib/Classes/Private/Plugins/CDVUIWebViewEngine/CsDVUIWebViewNavigationDelegate.m platforms/ios/CordovaLib/Classes/Private/Plugins/CDVUIWebViewEngine/.
+	ln -fs $(PWD)/src/ios/widget platforms/ios/.
 
 build:
 	cordova build
