--- a/mobile-app/src/ios/widget/Info.plist
+++ b/mobile-app/src/ios/widget/Info.plist
@@ -20,6 +20,11 @@
 	<string>0.2.6</string>
 	<key>CFBundleVersion</key>
 	<string>0.2.6</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionMainStoryboard</key>
