Update Bluetooth plugin requirements

--- a/mobile-app/src/plugins/cordova-plugin-bluetooth/plugin.xml
+++ b/mobile-app/src/plugins/cordova-plugin-bluetooth/plugin.xml
@@ -5,7 +5,10 @@
     <author>Thomas Zachariah</author>
     <license>Apache 2.0</license>
     <keywords>summon, bluetooth, BLE, bluetooth low energy, bluetooth smart</keywords>
-    <dependency id="cordova-plugin-ble-central" version="^1.1.1" />
+    <dependency id="cordova-plugin-ble-central" version="^1.1.4" />
+    <platform name="ios">
+        <preference name="BLUETOOTH_USAGE_DESCRIPTION" default="Scans for peripherals and enables interactions with associated devices" />
+    </platform>
     <js-module src="bluetooth.js" name="bluetooth">
         <clobbers target="bluetooth" />
     </js-module>
