--- a/mobile-app/src/plugins/cordova-plugin-ble/plugin.xml
+++ b/mobile-app/src/plugins/cordova-plugin-ble/plugin.xml
@@ -15,13 +15,13 @@
 	<keywords>bluetooth,ble,bluetooth low energy,bluetooth smart</keywords>
 	<license>Apache 2.0</license>
 
-	<js-module src="ble.js" name="BLE">
+	<js-module src="ble.js" name="EVOBLE">
 		<clobbers target="evothings.ble" />
 	</js-module>
 
 	<platform name="android">
 		<config-file target="res/xml/config.xml" parent="/*">
-			<feature name="BLE" >
+			<feature name="EVOBLE" >
 				<param name="android-package" value="com.evothings.BLE"/>
 			</feature>
 		</config-file>
@@ -35,7 +35,7 @@
 
 	<platform name="ios">
 		<config-file target="config.xml" parent="/*">
-			<feature name="BLE">
+			<feature name="EVOBLE">
 				<param name="ios-package" value="EVOBLE"/>
 			</feature>
 		</config-file>
