Make WebBluetooth plugin work

--- a/mobile-app/src/plugins/cordova-plugin-webbluetooth/plugin.xml
+++ b/mobile-app/src/plugins/cordova-plugin-webbluetooth/plugin.xml
@@ -9,7 +9,7 @@
     <platform name="ios">
         <preference name="BLUETOOTH_USAGE_DESCRIPTION" default="Scans for peripherals and enables interactions with associated devices" />
     </platform>
-    <js-module src="bluetooth.js" name="webbluetooth">
+    <js-module src="webbluetooth.js" name="webbluetooth">
         <clobbers target="webbluetooth" />
     </js-module>
 </plugin>
